[tool.poetry]
name = "python-best-setup"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_best_setup"}]

[tool.poetry.dependencies]
python = "^3.9.15"

torch = "^1.13.1"
torchvision = "^0.14.1"
torchaudio = "^0.13.1"
detectron2 = { git = "git@github.com:facebookresearch/detectron2.git", tag = "v0.6" }

[tool.poetry.dev-dependencies]
pytest = "~6"
pytest-cov = "^2.12"
pytest-mock = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
